@@ -3,6 +3,7 @@
     <constant name="widget_spacer_top">140</constant>
     <constant name="widget_spacer_bottom">0</constant>
     <constant name="widget_submenu_spacer">180</constant>
+    <constant name="widget_submenu_big_spacer">220</constant>
     <constant name="widget_poster_spacer">430</constant>
     <constant name="widget_gap">-180</constant>
     <constant name="widget_top">180</constant>
