@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes>
-    <constant name="widget_spacer_top">390</constant>
-    <constant name="widget_spacer_bottom">-250</constant>
-    <constant name="widget_submenu_spacer">430</constant>
-    <constant name="widget_submenu_big_spacer">470</constant>
-    <constant name="widget_poster_spacer">680</constant>
+    <constant name="widget_spacer_top">350</constant>
+    <constant name="widget_spacer_bottom">-210</constant>
+    <constant name="widget_submenu_spacer">390</constant>
+    <constant name="widget_submenu_big_spacer">430</constant>
+    <constant name="widget_poster_spacer">640</constant>
     <constant name="widget_gap">-650</constant>
-    <constant name="widget_top">400</constant>
+    <constant name="widget_top">440</constant>
 
     <!-- Details -->
     <!-- widget_spacer_top/bottom is the space from the top/bottom of screen for first/last widget -->
