@@ -198,6 +198,15 @@
                             <selected>!Skin.HasSetting(HideSubmenuWidget)</selected>
                             <onclick>Skin.ToggleSetting(HideSubmenuWidget)</onclick>
                         </control>
+                        <control type="radiobutton" id="9597" description="Categories widget labels">
+                            <visible>Integer.IsEqual(Window.Property(CurrentFocus),9101)</visible>
+                            <include>Defs_Settings_Button</include>
+                            <label>$LOCALIZE[31371]</label>
+                            <enable>!Skin.HasSetting(HideSubmenuWidget)</enable>
+                            <selected>Skin.HasSetting(SubmenuLabel)</selected>
+                            <onclick>Skin.ToggleSetting(SubmenuLabel)</onclick>
+                            <onclick>ReloadSkin()</onclick>
+                        </control>
                         <control type="radiobutton" id="9312" description="Display text labels on landscape widgets">
                             <visible>Integer.IsEqual(Window.Property(CurrentFocus),9101)</visible>
                             <include>Defs_Settings_Button</include>
