@@ -1,3 +1,6 @@
+[B]0.9.15[/B]
+Add widget categories text option (wider categories widget)
+
 [B]0.9.14[/B]
 LEIA - add extrathumbs to images in info dialog
 LEIA - fix for duration
